End Structure section 5

--- a/index.html
+++ b/index.html
@@ -439,10 +439,14 @@
        </div>
        <!-- End div description cards  -->
 
+       <!-- Start div info clients  -->
+       <div class="info-clients">
 
+              <h2>Titolo </h2>
+               <a href="">Scopri di più</a>
 
-
-
+       </div>
+       <!-- End Div info clients -->
 
 
 
