add section 6, Card of Sponsor

--- a/index.html
+++ b/index.html
@@ -447,29 +447,41 @@
 
        </div>
        <!-- End Div info clients -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     
     </div>
     <!-- End container 2  -->
 
 
+     <div class="sponsor">
 
+         <div class="sponsor-card">
 
+             <div class="lateral"></div>
+             <div class="lateral"></div>
+             <div class="lateral"></div>
+             <div class="lateral"></div>
+          
+         </div>
+
+         <div class="sponsor-card central">
+
+            <div class="central-sponsor"></div>
+            <div class="central-sponsor"></div>
+            <div class="central-sponsor"></div>
+
+         </div>
+
+         <div class="sponsor-card">
+
+           <div class="lateral"></div>
+           <div class="lateral"></div>
+           <div class="lateral"></div>
+           <div class="lateral"></div>
+
+         </div>
+
+     </div>
+     <!-- End sponsor div  -->
 
 
 
