End Structure Section 7, Business_version Section

--- a/index.html
+++ b/index.html
@@ -451,9 +451,10 @@
     </div>
     <!-- End container 2  -->
 
-
+      <!-- Start div sponsor -->
      <div class="sponsor">
 
+        <!-- Start Div sponsor cards  -->
          <div class="sponsor-card">
 
              <div class="lateral"></div>
@@ -462,7 +463,9 @@
              <div class="lateral"></div>
           
          </div>
+         <!-- End div sponsor cards  -->
 
+         <!-- Start div centarl sponsor cards  -->
          <div class="sponsor-card central">
 
             <div class="central-sponsor"></div>
@@ -470,7 +473,9 @@
             <div class="central-sponsor"></div>
 
          </div>
+         <!-- End div central sponsor cards  -->
 
+         <!-- Start div sponsor cards  -->
          <div class="sponsor-card">
 
            <div class="lateral"></div>
@@ -479,10 +484,22 @@
            <div class="lateral"></div>
 
          </div>
+        <!-- End div sponsor cards  -->
 
      </div>
      <!-- End sponsor div  -->
 
+
+     <div class="Business-Version">
+
+        <div class="container-2 flex-btw">
+            
+          <h2>Titolo</h2>
+          <button>Prova</button>
+
+        </div>
+
+     </div>
 
 
 
