Add Details Feature Section

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
        <div class="description-cards">
            
         <!-- Main Title description cards  -->
-           <h2>TITOLO PRINCIPALE </h2>
+           <h2>Esegui più Operazioni con Dropbox Business </h2>
 
               <!-- Internal Div or cards  -->
               <div>
@@ -347,15 +347,15 @@
 
                              <!-- Div image  -->
                             <div> 
-                                IMMAGINE
+                                <img src="img/business-feature-switching-tools.png" alt="">
                             </div>
                             <!-- Div internal title card  -->
-                            <div>
-                                <h3>Titolo</h3>
+                            <div class="height-25">
+                                <h3>Passa di meno da uno strumento all'altro</h3>
                             </div>
                             <!-- Div internal p card  -->
                             <div>
-                                lorem ipsum eccccc
+                              <p class="small"> Porta a Termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, File Microsoft Office e Dropbox Paper direttamente da Dropbox</p> 
                             </div>
 
                      </div>
@@ -364,17 +364,17 @@
                       <!-- Start Card  -->
                       <div class="card">
 
-                                <!-- Div image  -->
+                            <!-- Div image  -->
                             <div> 
-                                IMMAGINE
+                                <img src="img/business-feature-send-files-it.png" alt="">
                             </div>
                             <!-- Div internal title card  -->
-                            <div>
-                                <h3>Titolo</h3>
+                            <div class="height-25">
+                                <h3>Passa di meno da uno strumento all'altro</h3>
                             </div>
                             <!-- Div internal p card  -->
                             <div>
-                                lorem ipsum eccccc
+                              <p class="small"> Porta a Termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, File Microsoft Office e Dropbox Paper direttamente da Dropbox</p> 
                             </div>
 
                      </div>
@@ -384,17 +384,17 @@
                    <!-- Start Card  -->
                    <div class="card">
 
-                            <!-- Div image  -->
-                            <div> 
-                                IMMAGINE
+                             <!-- Div image  -->
+                             <div> 
+                                <img src="img/business-feature-coordinate-it.png" alt="">
                             </div>
                             <!-- Div internal title card  -->
-                            <div>
-                                <h3>Titolo</h3>
+                            <div class="height-25">
+                                <h3>Passa di meno da uno strumento all'altro</h3>
                             </div>
                             <!-- Div internal p card  -->
                             <div>
-                                lorem ipsum eccccc
+                              <p class="small"> Porta a Termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, File Microsoft Office e Dropbox Paper direttamente da Dropbox</p> 
                             </div>
 
                     </div>
@@ -403,18 +403,18 @@
                     <!-- Start Card  -->
                     <div class="card">
 
-                        <!-- Div image  -->
-                       <div> 
-                           IMMAGINE
-                       </div>
-                       <!-- Div internal title card  -->
-                       <div>
-                           <h3>Titolo</h3>
-                       </div>
-                       <!-- Div internal p card  -->
-                       <div>
-                           lorem ipsum eccccc
-                       </div>
+                         <!-- Div image  -->
+                         <div> 
+                            <img src="img/business-feature-integrations-it.png" alt="">
+                        </div>
+                        <!-- Div internal title card  -->
+                        <div class="height-25">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                        </div>
+                        <!-- Div internal p card  -->
+                        <div>
+                          <p class="small"> Porta a Termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, File Microsoft Office e Dropbox Paper direttamente da Dropbox</p> 
+                        </div>
 
                    </div>
                    <!-- End Card  -->
@@ -422,18 +422,18 @@
                     <!-- Start Card  -->
                     <div class="card">
 
-                        <!-- Div image  -->
-                       <div> 
-                           IMMAGINE
-                       </div>
-                       <!-- Div internal title card  -->
-                       <div>
-                           <h3>Titolo</h3>
-                       </div>
-                       <!-- Div internal p card  -->
-                       <div>
-                           lorem ipsum eccccc
-                       </div>
+                         <!-- Div image  -->
+                         <div> 
+                            <img src="img/business-feature-multi-device.png" alt="">
+                        </div>
+                        <!-- Div internal title card  -->
+                        <div class="height-25">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                        </div>
+                        <!-- Div internal p card  -->
+                        <div>
+                          <p class="small"> Porta a Termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, File Microsoft Office e Dropbox Paper direttamente da Dropbox</p> 
+                        </div>
 
                    </div>
                    <!-- End Card  -->
@@ -441,19 +441,18 @@
                    <!-- Start Card  -->
                    <div class="card">
 
-                            <!-- Div image  -->
-                        <div> 
-                            IMMAGINE
+                           <!-- Div image  -->
+                           <div> 
+                            <img src="img/business-feature-security.png" alt="">
                         </div>
                         <!-- Div internal title card  -->
-                        <div>
-                            <h3>Titolo</h3>
+                        <div class="height-25">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
                         </div>
                         <!-- Div internal p card  -->
                         <div>
-                            lorem ipsum eccccc
+                          <p class="small"> Porta a Termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, File Microsoft Office e Dropbox Paper direttamente da Dropbox</p> 
                         </div>
-
                   </div>
                   <!-- End Card  -->
 
