--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
        <!-- Start div info clients  -->
        <div class="info-clients">
 
-              <h2>Titolo </h2>
-               <a href="">Scopri di più</a>
+              <h2>Più di 500.000 team utilizzano Dropbox Business </h2>
+               <a href="">Scopri di più sui nostri clienti</a>
 
        </div>
        <!-- End Div info clients -->
