--- a/index.html
+++ b/index.html
@@ -481,10 +481,10 @@
         <!-- Start Div sponsor cards  -->
          <div class="sponsor-card">
 
-             <div class="lateral"></div>
-             <div class="lateral"></div>
-             <div class="lateral"></div>
-             <div class="lateral"></div>
+             <div class="lateral back-A2D39B bor-D1E9CD"><img src="img/designit.svg" alt=""></div>
+             <div class="lateral back-61082B"><img src="img/arizona_state_university.svg" alt=""></div>
+             <div class="lateral back-0093CE"><img src="img/university_of_florida.svg" alt=""></div>
+             <div class="lateral back-FF1C1C"><img src="img/topps.svg" alt=""></div>
           
          </div>
          <!-- End div sponsor cards  -->
@@ -492,9 +492,10 @@
          <!-- Start div centarl sponsor cards  -->
          <div class="sponsor-card central">
 
-            <div class="central-sponsor"></div>
-            <div class="central-sponsor"></div>
-            <div class="central-sponsor"></div>
+            <div class="central-sponsor" id="line-down"><img src="img/designit.svg" alt=""></div>
+            <div class="line-down"></div>
+            <div class="central-sponsor"><p class="small">"I membri dl nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p></div>
+            <div class="central-sponsor" id="mg-top"><p class="small"> Thomsen, Global IT Lead </p></div>
 
          </div>
          <!-- End div central sponsor cards  -->
@@ -502,10 +503,10 @@
          <!-- Start div sponsor cards  -->
          <div class="sponsor-card">
 
-           <div class="lateral"></div>
-           <div class="lateral"></div>
-           <div class="lateral"></div>
-           <div class="lateral"></div>
+           <div class="lateral back-D5001F"><img src="img/world_bicycle_relief.svg" alt=""></div>
+           <div class="lateral back-B4D0E7"><img src="img/hearst_corp.svg" alt=""></div>
+           <div class="lateral back-0D2481"><img src="img/lonely_planet.svg" alt=""></div>
+           <div class="lateral back-FFD830"><img src="img/clear_channel.svg" alt=""></div>
 
          </div>
         <!-- End div sponsor cards  -->
