Add Details Of Business Section

--- a/index.html
+++ b/index.html
@@ -521,10 +521,10 @@
         <div class="container-2 flex-btw">
 
          <div>
-          <h2>Titolo</h2>
+          <h2>Porta Dropbox Business nella tua Azienda</h2>
         </div>
 
-          <button>Prova</button>
+        <span class="button-big back-white small">Inizia la tua prova gratuita</span>
 
         </div>
          <!-- End internal container of business-v div  -->
