--- a/index.html
+++ b/index.html
@@ -574,11 +574,11 @@
             <div>
                 <h4>Dropbox</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <a href=""><li>Applicazione Desktop</li></a>
+                    <a href=""><li>Perchè Dropbox</li></a>
+                    <a href=""><li>Piani</li></a>
+                    <a href=""><li>Sicurezza</li></a>
+                    <a href=""><li>Funzioni</li></a>
                 </ul>
             </div>
            <!-- End internal list  -->
@@ -589,11 +589,11 @@
             <div>
                 <h4>Prodotti</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <a href=""><li>Applicazione Desktop</li></a>
+                    <a href=""><li>Perchè Dropbox</li></a>
+                    <a href=""><li>Piani</li></a>
+                    <a href=""><li>Sicurezza</li></a>
+                    <a href=""><li>Funzioni</li></a>
                 </ul>
             </div>
            <!-- End internal list  -->
@@ -603,11 +603,11 @@
             <div>
                 <h4>Azienda</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <a href=""><li>Applicazione Desktop</li></a>
+                    <a href=""><li>Perchè Dropbox</li></a>
+                    <a href=""><li>Piani</li></a>
+                    <a href=""><li>Sicurezza</li></a>
+                    <a href=""><li>Funzioni</li></a>
                 </ul>
             </div>
            <!-- End internal list  -->
@@ -617,11 +617,11 @@
             <div>
                 <h4>Supporto</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <a href=""><li>Applicazione Desktop</li></a>
+                    <a href=""><li>Perchè Dropbox</li></a>
+                    <a href=""><li>Piani</li></a>
+                    <a href=""><li>Sicurezza</li></a>
+                    <a href=""><li>Funzioni</li></a>
                 </ul>
             </div>
            <!-- End internal list  -->
@@ -631,11 +631,11 @@
             <div>
                 <h4>Community</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <a href=""><li>Applicazione Desktop</li></a>
+                    <a href=""><li>Perchè Dropbox</li></a>
+                    <a href=""><li>Piani</li></a>
+                    <a href=""><li>Sicurezza</li></a>
+                    <a href=""><li>Funzioni</li></a>
                 </ul>
             </div>
            <!-- End internal list  -->
@@ -648,7 +648,7 @@
         <div class="language">
 
 
-            <i class="fa-solid fa-earth-americas"></i><span class="small">Italiano</span><i class="fa-solid fa-caret-up"></i> 
+            <i class="fa-solid fa-earth-americas"></i><a href=""><span class="small text-white">Italiano</span></a><i class="fa-solid fa-caret-up"></i> 
 
         </div>
         <!-- end div language  -->
