Add DropDown Details

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                   
                 <h3>Entra in contatto con un partner Dropbox</h3>
                  <p class="small">Troa un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                 <a href="" class="no-line"><span class="button border-black">Trova un partner</span></a>
+                 <a href="" class="no-line text-black"><span class="button border-black">Trova un partner</span></a>
 
             </div>
             <!-- End text div  -->
@@ -540,15 +540,24 @@
         <h2>Domande Frequenti</h2>
         
         <div class="bord-up-down">
-            <strong><p class="small">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p></strong><i class="fa-solid fa-angle-down"></i>
+            <strong><p class="small text-black">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p></strong><i class="fa-solid fa-angle-down text-black"></i><i class="fa-solid fa-angle-up"></i>
+            <div class="dropdown">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda quidem, veniam illo ab, soluta quasi expedita tenetur tempora unde porro amet, culpa fuga mollitia quaerat minus neque quod quos?</p>
+            </div>
        </div>
 
-       <div>
-        <strong><p class="small">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p></strong><i class="fa-solid fa-angle-down"></i>
+       <div class="drop">
+        <strong><p class="small text-black">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p></strong><i class="fa-solid fa-angle-down text-black"></i><i class="fa-solid fa-angle-up"></i>
+        <div class="dropdown">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda quidem, veniam illo ab, soluta quasi expedita tenetur tempora unde porro amet, culpa fuga mollitia quaerat minus neque quod quos?</p>
+        </div>
        </div>
 
        <div class="bord-up-down">
-        <strong><p class="small">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p></strong><i class="fa-solid fa-angle-down"></i>
+        <strong><p class="small text-black">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p></strong><i class="fa-solid fa-angle-down text-black"></i><i class="fa-solid fa-angle-up"></i>
+        <div class="dropdown">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda quidem, veniam illo ab, soluta quasi expedita tenetur tempora unde porro amet, culpa fuga mollitia quaerat minus neque quod quos?</p>
+        </div>
       </div>
 
 
@@ -648,7 +657,7 @@
         <div class="language">
 
 
-            <i class="fa-solid fa-earth-americas"></i><a href=""><span class="small text-white">Italiano</span></a><i class="fa-solid fa-caret-up"></i> 
+            <i class="fa-solid fa-earth-americas"></i><a href="" class="no-line"><span class="small text-white">Italiano</span></a><i class="fa-solid fa-caret-up"></i> 
 
         </div>
         <!-- end div language  -->
