Add Style of Radio Buttons

--- a/index.html
+++ b/index.html
@@ -94,13 +94,21 @@
 
             <!-- First check  -->
             <div class="check">
-                <input type="radio" id="mensile"> <label for="mensile">Fatturazione Mensile</label>
+                <label for="mensile">
+                    <input type="radio" id="mensile">
+                    <div class="radio-btn"></div>
+                    <span>Fatturazione Mensile</span>
+                </label>
             </div> 
             <!-- End first check -->
 
             <!-- Start second check  -->
             <div class="check">
-                <input type="radio" id="annuale"> <label for="annuale">Fatturazione annuale</label>
+                <label for="annuale">
+                    <input type="radio" id="annuale">
+                    <div class="radio-btn"></div>
+                     <span>Fatturazione annuale</span>  
+                </label>
             </div>
             <!-- End second check  -->
 
@@ -547,10 +555,10 @@
        </div>
 
        <div class="drop">
-        <strong><p class="small text-black">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p></strong><i class="fa-solid fa-angle-down text-black"></i><i class="fa-solid fa-angle-up"></i>
-        <div class="dropdown">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda quidem, veniam illo ab, soluta quasi expedita tenetur tempora unde porro amet, culpa fuga mollitia quaerat minus neque quod quos?</p>
-        </div>
+          <strong><p class="small text-black">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p></strong><i class="fa-solid fa-angle-down text-black"></i><i class="fa-solid fa-angle-up"></i> 
+          <div class="dropdown">
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat assumenda quidem, veniam illo ab, soluta quasi expedita tenetur tempora unde porro amet, culpa fuga mollitia quaerat minus neque quod quos?</p>
+          </div>
        </div>
 
        <div class="bord-up-down">
