--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                  <!-- Start jumbo-section -->
                  <div class="jumbo-section">
 
-                     <div class="card-jumbo">
+                     <div class="card-jumbo-1">
                         
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <a href=""><span class="button back-blue text-white">Inizia La tua prova gratuita</span></a>
@@ -70,7 +70,7 @@
 
                      </div>
 
-                     <div class="card-jumbo">
+                     <div class="card-jumbo-2">
                         <img src="img/jumbo.png" alt="">
                     </div>
             
